--- a/Java_20240129_클래스/.project
+++ b/Java_20240129_클래스/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Java_20240129_클래스01</name>
+	<name>Java_20240129_클래스</name>
 	<comment></comment>
 	<projects>
 	</projects>
